--- a/style.css
+++ b/style.css
@@ -1,3 +1,90 @@
-body {
+/*-----------------------------------------------------------------------
+--------------------------Custom CSS Properties------------------------
+----------------------------------------------------------------------- */
 
+
+/* -----------------------------------------------------------------------
+------------------End of Custom CSS Properties-------------------------
+----------------------------------------------------------------------- */
+
+/* -----------------------------------------------------------------------
+--------------------------CSS Reset------------------------
+----------------------------------------------------------------------- */
+/*
+  Josh's Custom CSS Reset
+  https://www.joshwcomeau.com/css/custom-css-reset/
+*/
+*, *::before, *::after {
+  box-sizing: border-box;
 }
+* {
+  margin: 0;
+}
+html, body {
+  height: 100%;
+}
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+input, button, textarea, select {
+  font: inherit;
+}
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+/* -----------------------------------------------------------------------
+------------------End of CSS Reset--------------------------------------------
+----------------------------------------------------------------------- */
+
+
+
+/*-----------------------------------------------------------------------
+--------------------------Utility Classes------------------------
+----------------------------------------------------------------------- */
+
+
+/* -----------------------------------------------------------------------
+------------------End of Utility Classes-------------------------
+----------------------------------------------------------------------- */
+
+/*-----------------------------------------------------------------------
+--------------------------Block Components-------------------------------
+----------------------------------------------------------------------- */
+
+
+/* -----------------------------------------------------------------------
+------------------End of Block Components---------------------------------
+----------------------------------------------------------------------- */
+
+/*-----------------------------------------------------------------------
+--------------------------Block Elements------------------------
+----------------------------------------------------------------------- */
+
+
+/* -----------------------------------------------------------------------
+------------------End of Block Elements-------------------------
+----------------------------------------------------------------------- */
+
+/*-----------------------------------------------------------------------
+--------------------------Modifiers------------------------
+----------------------------------------------------------------------- */
+
+
+/* -----------------------------------------------------------------------
+------------------End of Modifiers-------------------------
+----------------------------------------------------------------------- */
+
+/*-----------------------------------------------------------------------
+--------------------------Media Queries------------------------
+----------------------------------------------------------------------- */
+
+
+/* -----------------------------------------------------------------------
+------------------End of Media Queries-------------------------
+----------------------------------------------------------------------- */
