made small changes

--- a/style.css
+++ b/style.css
@@ -252,11 +252,11 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-
+  place-items: center;
 }
 
 .navigation {
-  
+
 
   display: flex;
   flex-flow: row wrap;
